--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
             <artifactId>jetty-servlet</artifactId>
             <version>11.0.24</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.11.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.velocity</groupId>
@@ -25,7 +30,6 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.14.0</version>
         </dependency>
-
     </dependencies>
     <properties>
         <maven.compiler.source>22</maven.compiler.source>
